<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Observer</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="sign_in">Sign in</string>
    <string name="main_message_to_backend">Failed-to-login!</string>
    <string name="main_menu_btn_info">About</string>
    <string name="app_info_toast" formatted="false">
        "This application build type: %s.\nDistributed in %s and cost you %s."
    </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail_hint">Enter your e-mail here</string>
    <string name="as_guest">As guest</string>
    <string name="create">Create</string>
    <string name="retrieve">Retrieve</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="http_json">HTTP(JSON)</string>
    <string name="recycler_view">Recycler View</string>
    <string name="my_account">My Account</string>
    <string name="load_avatar">Load avatar</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up">Sign up</string>
    <string name="observer">Observer</string>
    <string name="str_synchronization">Synchronization</string>
    <string name="not_enabled">Not enabled</string>
    <string name="msg_token_invalidated">Token invalidated</string>
    <string name="msg_sp_value_retrieved">Value %s retrieved</string>
    <string name="msg_dummy">Dummy message</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="current_user">Current user:</string>
    <string name="stands">Stands</string>
    <string name="modules">Modules</string>
    <string name="reload">Reload</string>
    <string name="clear">Clear</string>
    <string name="data">Data</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- navigation -->
    <string name="main_menu_btn_navigation_description">Open navigation menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_opened">Opened drawer</string>
    <string name="drawer_closed">Closed drawer</string>
    <string name="header">Header</string>
    <string name="body">Body</string>
    <string name="user_login_default">No current user</string>
    <string name="button_for_clean_up">Button for clean up</string>
    <string name="button_for_reload">Button for reload</string>
    <string name="user_avatar_desc">User avatar icon</string>
    <string name="status">Status</string>
    <string name="value">Value</string>
    <string name="data_status">Description of modules\' event</string>
    <string name="content">Content</string>
    <string name="upload">Upload</string>
    <string name="test_text">Button</string>
    <string name="authentication">Authentication</string>
    <string name="registration">Registration</string>
    <string name="ok">Ok</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_different_passwords">Passwords must match.</string>
    <string name="review_content">Review content</string>
    <string name="success_load_data">Data loaded successfully.</string>
    <string name="settings_language_select">Select your language</string>
    <string name="settings_theme_select">Select theme for application</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_language">Language</string>
</resources>
