<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Main">

    <TextView
        android:id="@+id/main_menu_title"
        style="@style/Main.Title"
        android:text="@string/app_name"/>

    <LinearLayout
        android:id="@+id/main_menu"
        style="@style/Main.Menu">

        <Button
            android:id="@+id/btn_my_account"
            style="@style/Main.Button"
            android:onClick="onMyAccountClick"
            android:text="@string/my_account"/>

        <Button
            android:id="@+id/main_menu_btn_modules"
            style="@style/Main.Button"
            android:onClick="onModulesClick"
            android:text="@string/modules"
            android:visibility="gone"/>

        <Button
            android:id="@+id/main_menu_btn_stands"
            style="@style/Main.Button"
            android:onClick="onStandsClick"
            android:text="@string/stands"
            android:visibility="gone"/>

        <Button
            android:id="@+id/main_menu_btn_exit"
            style="@style/Main.Button"
            android:onClick="onExitClick"
            android:text="@string/exit"/>
    </LinearLayout>
</FrameLayout>
