<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_login"
    style="@style/LoginPageLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- switches to horizontal when not enough space -->
        <android.support.v7.widget.ButtonBarLayout
            style="@style/LoginPageButtonBar">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_login_page_authentication"
                style="@style/LoginPageButton"
                android:background="@drawable/page_button_background_active"
                android:text="@string/authentication"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_login_page_registration"
                style="@style/LoginPageButton"
                android:background="@drawable/page_button_background_shadowed"
                android:text="@string/registration"/>

        </android.support.v7.widget.ButtonBarLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/LoginPageTitle"
            android:text="@string/observer"/>

        <android.support.v7.widget.LinearLayoutCompat
            style="@style/LoginPageContainer"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_page_login"
                style="@style/LoginPageEditText"
                android:hint="@string/login"
                android:inputType="text"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_page_password"
                style="@style/LoginPageEditText"
                android:hint="@string/password"
                android:inputType="textWebPassword"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_page_password_confirm"
                style="@style/LoginPageEditText"
                android:hint="@string/confirm_password"
                android:inputType="textWebPassword"
                android:visibility="invisible"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_page_ok"
            style="@style/LoginPageButton"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/ok"
            android:textSize="@dimen/page_button_ok_text_size"/>
    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>