<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_account_root"
    style="@style/Main">

    <TextView
        android:id="@+id/my_account_title"
        style="@style/LoginLayout.Title"
        android:text="@string/my_account"/>

    <LinearLayout
        android:id="@+id/my_account_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/my_account_login_label"
            style="@style/StandardTextView"
            android:text="@string/current_user"/>

        <TextView
            android:id="@+id/my_account_login"
            style="@style/StandardTextView"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_account"
        style="@style/Main.Menu">

        <Button
            android:id="@+id/my_account_btn_log_in"
            style="@style/Main.Button"
            android:onClick="onLoginClick"
            android:text="@string/log_in"/>

        <Button
            android:id="@+id/my_account_btn_log_out"
            style="@style/Main.Button"
            android:onClick="onLogoutClick"
            android:text="@string/log_out"
            android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>
