<?xml version="1.0" encoding="utf-8"?>
<FrameLayout style="@style/Main"
             xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/Main.Title"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/stands"
        android:textSize="@dimen/guest_form_title_text_size"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stands_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_form_margin_top"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/stands_clear_button"
        style="@style/ReloadButton"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:onClick="onClearClick"
        android:text="@string/clear"/>

    <Button
        android:id="@+id/stands_reload_button"
        style="@style/ReloadButton"
        android:onClick="onReloadClick"
        android:text="@string/reload"/>
</FrameLayout>
