<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/my_account_root"
             style="@style/Layout"
             xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/my_account_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/my_account_login_label"
            style="@style/StandardTextView"
            android:text="@string/current_user"/>

        <TextView
            android:id="@+id/my_account_login"
            style="@style/StandardTextView"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_account"
        style="@style/Layout"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/my_account_btn_log_in"
            style="@style/Button"
            android:text="@string/log_in"/>

        <Button
            android:id="@+id/my_account_btn_log_out"
            style="@style/Button"
            android:text="@string/log_out"
            android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>
