<?xml version="1.0" encoding="utf-8"?>
<FrameLayout style="@style/Layout"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.view.ViewPager
        style="@style/Layout"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.design.widget.TabLayout
            style="@style/Layout"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:tabBackground="@color/colorPrimaryAverage"
            app:tabSelectedTextColor="@color/primaryTextAccentColor"
            app:tabTextColor="@color/primaryTextColor">

            <android.support.design.widget.TabItem
                style="@style/TabItem"
                android:icon="@drawable/ic_data_24dp"
                android:text="@string/data"/>

            <android.support.design.widget.TabItem
                style="@style/TabItem"
                android:icon="@drawable/ic_module_24dp"
                android:text="@string/modules"/>

            <android.support.design.widget.TabItem
                style="@style/TabItem"
                android:icon="@drawable/ic_stand_24dp"
                android:text="@string/stands"/>
        </android.support.design.widget.TabLayout>
    </android.support.v4.view.ViewPager>

    <include layout="@layout/toolbar_main"/>
</FrameLayout>