<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout style="@style/Layout"
                                            xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_title"
        style="@style/AuthenticationTitle"/>


    <LinearLayout
        android:id="@+id/login_form"
        style="@style/Form"
        app:layout_marginBottomPercent="@fraction/login_form_margin_bottom">

        <TextView
            android:id="@+id/login_log_in_title"
            style="@style/LoginLabel"/>

        <EditText
            android:id="@+id/login_login"
            style="@style/LoginView"
            android:layout_marginBottom="@dimen/default_margin"/>

        <TextView
            android:id="@+id/login_password_title"
            style="@style/PasswordLabel"/>

        <EditText
            android:id="@+id/login_password"
            style="@style/PasswordView"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_guest"
            style="@style/Button"
            android:layout_gravity="start"
            android:onClick="onGuestClick"
            android:text="@string/as_guest"/>

        <Button
            android:id="@+id/btn_log_in"
            style="@style/Button"
            android:layout_gravity="center"
            android:onClick="onLogInClick"
            android:text="@string/log_in"/>

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Button"
            android:layout_gravity="end"
            android:onClick="onSignUpClick"
            android:text="@string/sign_up"/>
    </FrameLayout>
</android.support.percent.PercentFrameLayout>