<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LoginLayout">

    <TextView
        android:id="@+id/login_title"
        style="@style/LoginLayout.Title"/>

    <LinearLayout
        android:id="@+id/login_form"
        style="@style/LoginLayout.Form"
        app:layout_marginBottomPercent="@fraction/login_form_margin_bottom">

        <TextView
            android:id="@+id/login_log_in_title"
            style="@style/LoginLayout.Title.Login"/>

        <EditText
            android:id="@+id/login_login"
            style="@style/LoginLayout.Login"
            android:layout_marginBottom="@dimen/default_margin"/>

        <TextView
            android:id="@+id/login_password_title"
            style="@style/LoginLayout.Title.Password"/>

        <EditText
            android:id="@+id/login_password"
            style="@style/LoginLayout.Password"/>
    </LinearLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_guest"
            style="@style/LoginLayout.Button"
            android:onClick="onGuestClick"
            android:text="@string/as_guest"
            app:layout_heightPercent="@fraction/login_button_height"
            app:layout_widthPercent="@fraction/login_button_width"/>

        <Button
            android:id="@+id/btn_log_in"
            style="@style/RegistrationLayout.Button"
            android:layout_centerInParent="true"
            android:onClick="onLogInClick"
            android:text="@string/log_in"
            app:layout_heightPercent="@fraction/login_sign_in_button_height"
            app:layout_widthPercent="@fraction/login_sign_in_button_width"/>

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/LoginLayout.Button"
            android:onClick="onSignUpClick"
            android:text="@string/sign_up"
            app:layout_heightPercent="@fraction/login_button_height"
            app:layout_marginStartPercent="@fraction/login_btn_login_margin_left"
            app:layout_widthPercent="@fraction/login_button_width"/>
    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentFrameLayout>